components/mynewcomponent/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: mysecondapplication
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: mynewcomponent
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmynewcomponent
  namespace: pshivpuj
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-mynewcomponent
    weight: null
status: {}
